[package]
name = "constrained-connection"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mxinden/constrained-connection"
description = "Simulate constrained network connections."

[dependencies]
futures = "0.3"
futures-timer = "3"

[dev-dependencies]
quickcheck = "1"
